# two-wings-bot

./: .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: _check.yaml  _test.yaml  feature.yaml
docs/: database.puml
two_wings_bot/adapters/database/: __main__.py  alembic.ini  base.py  tables.py  utils.py
two_wings_bot/adapters/database/migrations/: env.py
