[tool.poetry]
name = "two-wings"
version = "0.1.0"
description = "Telegram bot for foundation \"Two Wings\""
authors = ["Sergey Natalenko <sergey.natalenko@mail.ru>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
dishka = "^1.4.0"
aiomisc = "^17.5.26"
SQLAlchemy = "^2.0.36"
alembic = "^1.13.3"
asyncpg = "^0.30.0"
aiogram = "^3.13.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.24.0"
pytest-cov = "^5.0.0"
coverage = "^7.6.4"
mypy = "^1.13.0"
ruff = "^0.7.1"
polyfactory = "^2.17.0"
aiomisc-pytest = "^1.2.1"
pre-commit = "^4.0.1"
dirty-equals = "^0.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
